Add gpu_main_thread_factory.h to expose less of content's guts.

gpu_process_host.h exposes a lot of the content layer's guts, including
mojo message files which complicate build depenencies.

Add gpu_main_thread_factory.h to expose the bits that things outside of
content/browser are using. Sepcifically, RegisterGpuMainThreadFactory().

After this, the only files that #include gpu_process_host.h are .cc
files in content/browser or content/public/browser. That is, files built
in a target that already has a dependency on the source of build flakes
coming from //services/ui/gpu/interfaces/.

BUG=688477
TBR=avi@chromium.org

Review-Url: https://codereview.chromium.org/2675163002
Cr-Commit-Position: refs/heads/master@{#448472}

Former-commit-id: 4091f2f04a14767d816857bd480088c3c62d25d8